--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,8 +1,9 @@
 name: Reun Automated Tests
 on: 
+  push:
+    branches: [ "master" ]
   pull_request:
-    branches: 
-      - master
+    branches: [ "master" ]
 
 jobs:
   TestJobs:
