--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,7 +20,7 @@ jobs:
           cache: maven
 
       - name: Run Maven Tests
-        run: mvn test -Dtestng=smoke
+        run: mvn test -Dsmoke
         
       
     
